@@ -1,4 +1,7 @@
 2009-04-12
+	* improve retrieval2() to place cursor at the beginning of the retrieved coding widget.
+
+2009-04-12
 	* Double-click handler of Attrs and Journal Tabs.
 	* "Show coded/uncoded files only" popup menu for File Category.
 	* conditional retrieval.
